tests/baselines/reference/moduleAugmentationsImports2.errors.txt
error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
e.ts(1,1): error TS18056: Declaration file contains synthesized file reference directives: '"c.d.ts"'


!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export class B {x: number;}
    
==== c.d.ts (0 errors) ====
    declare module "C" {
        class Cls {y: string; }
    }
    
==== d.ts (0 errors) ====
    /// <reference path="c.d.ts"/>
    
    import {A} from "./a";
    import {B} from "./b";
    
    A.prototype.getB = function () { return undefined; }
    
    declare module "./a" {
        interface A {
            getB(): B;
        }
    }
    
==== e.ts (1 errors) ====
    import {A} from "./a";
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"c.d.ts"'
    import {Cls} from "C";
    
    A.prototype.getCls = function () { return undefined; }
    
    declare module "./a" {
        interface A {
            getCls(): Cls;
        }
    }
    
==== main.ts (0 errors) ====
    import {A} from "./a";
    import "d";
    import "e";
    
    let a: A;
    let b = a.getB().x.toFixed();
    let c = a.getCls().y.toLowerCase();